--- a/src/index.css
+++ b/src/index.css
@@ -118,7 +118,7 @@ body{
 
 }
 .login.select-arrow.prefix::before {
-    color: #333;
+    color: #999;
     top: 14px;
     content: "\e896";
     font-family:'nf-icon';
@@ -156,20 +156,32 @@ body{
  .nfTextField:focus {
     background: #454545;
 }
-.hybrid-login-form .hasText+.placeLabel, .hybrid-login-form .nfTextField:focus+.placeLabel {
+.hybrid-login-form .hasText.placeLabel, .hybrid-login-form .nfTextField:focus+.placeLabel {
     top: 4px;
 }
-.hybrid-login-form .hasText+.placeLabel,.hybrid-login-form .nfTextField:focus+.placeLabel {
-    top: 7px
+.placeLabel {
+    color: #8c8c8c;
+    font-size: 14px;
+    left: 20px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: font .1s ease,top .1s ease,transform .1s ease;
 }
-.hasText+.placeLabel,.nfTextField:focus+.placeLabel {
+
+.hasText.placeLabel,.nfTextField:focus+.placeLabel {
     font-size: 11px;
     top: 4px;
     transform: translateY(0)
 }
+.loginControls.error{
+    border-bottom: 2px solid #e87c03;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
 
 
- .placeLabel {
+ .placeLabeltext {
     font-size: 1rem;
     line-height: 1.5;
     color: rgba(0, 0, 0, 0.7);
@@ -209,8 +221,8 @@ body{
     border-color: #0071eb;
     outline: none;
 }
-.textField:focus + .placeLabel,
-.placeLabel.hasText {
+.textField:focus + .placeLabeltext,
+.placeLabeltext.hasText {
     font-size: 13px;
     font-weight: 500;
     top: 6px;
@@ -219,4 +231,3 @@ body{
  .error>.textField, .textField.error {
     border-color: #b92d2b;
 }
-
