--- a/src/index.css
+++ b/src/index.css
@@ -231,3 +231,31 @@ body{
  .error>.textField, .textField.error {
     border-color: #b92d2b;
 }
+.caret{
+    border-color: #fff transparent transparent;
+    border-style: solid;
+    border-width: 5px 5px 0;
+    height: 0;
+    margin-left: 10px;
+    transition: transform 367ms cubic-bezier(.21,0,.07,1);
+    width: 0;
+}
+.caret.open {
+    transform: rotate(180deg);
+}
+.sub-menu{
+    margin-left: 0;
+    padding: 0;
+    right: 0;
+    width: 220px;
+    background-color: rgba(0,0,0,.9);
+    border: 1px solid hsla(0,0%,100%,.15);
+    box-sizing: border-box;
+    color: #fff;
+    cursor: default;
+    font-size: 13px;
+    line-height: 21px;
+    width: 220px;;
+    position: absolute;
+    top: 36px;
+}
