--- a/src/index.css
+++ b/src/index.css
@@ -257,5 +257,17 @@ body{
     line-height: 21px;
     width: 220px;;
     position: absolute;
-    top: 36px;
+    top: 32px;
+}
+.pagination-indicator {
+    display: none;
+    list-style-type: none;
+    margin: -24px 0 12px;
+    padding: 0;
+    position: absolute;
+    right: 4%;
+    top: 0;
+}
+.slider:hover .pagination-indicator {
+    display: block;
 }
